syntax = "proto3";

package grpcs;

import "common.proto";

option go_package = "Miscellaneous/grpcs/protos;grpcs";

message NewUser {
  string user_name = 1;
  string full_name = 2;
  bool is_admin = 3;
  string password = 4;
}

message UserResult {
  string id = 1;
  string user_name = 2;
  string full_name = 3;
  bool is_admin = 4;
  string hash = 5;
}

message GetUserResult {
  optional UserResult user = 1;
}

message User {
  string id = 1;
  string user_name = 2;
  string full_name = 3;
  bool is_admin = 4;
}

message UserNameRequest {
  string user_name = 1;
}

message UserList {
  repeated User users = 1;
}

service Users {
  rpc Create (NewUser) returns (Empty);
  rpc Get (UserNameRequest) returns (GetUserResult);
  rpc GetAll (Empty) returns (UserList);
  rpc Update (User) returns (Empty);
  rpc Delete (IdRequest) returns (Empty);
}
